{
    "name": "PongInput",
    "maps": [
        {
            "name": "Player",
            "id": "64a7fe52-7092-4d73-be63-a78d0bf9e481",
            "actions": [
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "8ccd7356-6639-425a-a56c-db9342e745a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "0bb8df07-44d7-4ccc-b1d6-c46d10bc5ce4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ad71f1b4-7af4-402a-a832-3c80383fc92f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61db0cfa-2a95-47bd-9b42-62e38638b292",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4991071-0d5f-466e-b970-66cae8dbc333",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d08fd1bc-97dd-48f6-9fff-207073cc252f",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}